2021-06-22

- Added --show-config
- Added messages
- Added missing Handler
- Check if YaDU version is at LATEST
- Explicitly sowing when missing AWS PROFILE / REGION
- Tested config service

2021-06-17

- Tested on windows regarding the path issues
- Added config service
- Added find Home using the nearest .git/ directory
- resolved issue-1

2021-06-16

- fixed windows paths with liquibase

2021-06-11

- Added find nearest .git
- Improved console outputs
- Fixed some bugs

2021-06-09

- Added first version of the config service

2021-06-08

- added --template to generate sam YAML including the alarm and the loggroup

2021-06-07

- Fixed issues
    - Unable to override secret manager configuration for the database
- Added lambda for future notification process
- Added dummy class for better implementation with service config
- Added base logic and code to load the lambda configuration by reading the SAM cloudformation YAML file
    - It requires the config service to work properly
- Added tests and fixed the existing ones.
- Liquibase isn't launched using --dry-run by default

2021-05-28

- Reviewed changes to create a PR
- Added warning message for create-version that will be fix later.
- Improved CLI documentation
- Added test for secret manager and suffix
- Moved validation functions
- improved liquibase installation script (need to test it on Windows)
- reworked the liquibase parameters, such as DB_URL, DB_EXTRA, DB_PORT, DB_NAME and their equivalent with _REF

2021-05-17

- Working on feature request https://github.com/Insyders/yadu/issues/2

2021-05-14

- Improved documentation

2021-05-13

- Improve documentation

2021-05-12

- Added args for db-user, db-pass and db-url

2021-05-11

- Added parser for RDS secrets manager.
- Added output of for liquibase command when executing in dry-run.
- Set liquibase hub configuration to optional

2021-05-10

- Migrated YaDU to this repository