@@ -35,6 +35,7 @@ function assignVariables(args = {}) {
       console.error(`${'[ERROR]'.error} --db-name-ref or DB_NAME_REF is not defined`);
       throw new Error('--db-name-ref or DB_NAME_REF is not defined');
     }
+    process.env.DB_HOST_REF = args['db-url-ref'] || process.env.DB_URL_REF;
     process.env.DB_URL_REF = `jdbc:mysql://${args['db-url-ref'] || process.env.DB_URL_REF}:${
       args['db-port-ref'] || process.env.DB_PORT_REF || 3306
     }/${args['db-name-ref'] || process.env.DB_NAME_REF || null}?${
@@ -54,6 +55,7 @@ function assignVariables(args = {}) {
       console.error(`${'[ERROR]'.error} --db-name or DB_NAME is not defined`);
       throw new Error('--db-name or DB_NAME is not defined');
     }
+    process.env.DB_HOST = args['db-url'] || process.env.DB_URL;
     process.env.DB_URL = `jdbc:mysql://${args['db-url'] || process.env.DB_URL}:${args['db-port'] || process.env.DB_PORT || 3306}/${
       args['db-name'] || process.env.DB_NAME || null
     }?${args['db-extra'] || process.env.DB_EXTRA || 'useUnicode=true&characterEncoding=UTF-8'}`;
