@@ -1,3 +1,7 @@
+2021-06-23
+
+- Added mysqldump, it uses the config service and the same parameters than liquibase.
+
 2021-06-22
 
 - Added --show-config
